--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -14,14 +14,25 @@
     flex-direction: column;
     justify-content: center;
 
-    .logo{
-      a{
+    @media all and (-ms-high-contrast:none) {
+
+      *::-ms-backdrop,
+      .logo {
+        padding-top: 10px;
+        /* IE11 */
+      }
+    }
+
+    .logo {
+      a {
         display: block;
         width: 100%;
-        @supports(display: grid){
+
+        @supports(display: grid) {
           height: 100%;
         }
-        img{
+
+        img {
           max-width: 140px;
           object-fit: contain;
         }
